<?xml version="1.0" encoding="utf-8"?>
<!--
  Copyright (C) 2012 The Android Open Source Project

  Licensed under the Apache License, Version 2.0 (the "License");
  you may not use this file except in compliance with the License.
  You may obtain a copy of the License at

       http://www.apache.org/licenses/LICENSE-2.0

  Unless required by applicable law or agreed to in writing, software
  distributed under the License is distributed on an "AS IS" BASIS,
  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  See the License for the specific language governing permissions and
  limitations under the License.
-->
<resources>

    <string name="app_name">Music Feedback App</string>
    <string name="address">Address:</string>
    <string name="enable_gps">Enable GPS</string>
    <string name="enable_gps_dialog">GPS provider not enabled. Would you like to enable it?</string>
    <string name="latlng">Lat/Long:</string>
    <string name="unknown">--Unknown--</string>
    <string name="not_support_gps">GPS provider not supported</string>
    <string name="not_support_network">Network provider not supported</string>
    <string name="use_fine_provider">Fine-grain provider</string>
    <string name="use_both_providers">Both providers</string>
    <string name="minspeed">Minimum Pace (min/mile)</string>
    <string name="maxspeed">Maximum Pace (min/mile)</string>
    <string name="speed">Current Pace (min/mile):</string>
    <string name="maxvolume">Max Volume</string>
    <string name="logStartButtonString">Start</string>
    <string name="logStopButtonString">Stop</string>
    <string name="avgspeedlabel">Average Speed(m/s):</string>
    <string name="avgpacelabel">Average Pace:</string>
    <string name="avgspeed">0.0</string>
    <string name="avgpace">infinity</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_menu">MenuActivity</string>
    <string name="title_activity_baseline">BaselineActivity</string>
    <string name="feedbackONOFFstr">Feedback</string>
</resources>