<?xml version="1.0" encoding="utf-8"?>
<!--
  Copyright (C) 2012 The Android Open Source Project

  Licensed under the Apache License, Version 2.0 (the "License");
  you may not use this file except in compliance with the License.
  You may obtain a copy of the License at

       http://www.apache.org/licenses/LICENSE-2.0

  Unless required by applicable law or agreed to in writing, software
  distributed under the License is distributed on an "AS IS" BASIS,
  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  See the License for the specific language governing permissions and
  limitations under the License.
-->
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent" android:layout_height="fill_parent">
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/provider_fine"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button_inactive"
            android:minWidth="160sp"
            android:onClick="useFineProvider"
            android:text="@string/use_fine_provider"
            android:textSize="12sp" />

        <ToggleButton
            android:id="@+id/tglSetStatus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="ToggleButton" />

        <Button
            android:id="@+id/provider_both"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button_inactive"
            android:minWidth="160sp"
            android:onClick="useCoarseFineProviders"
            android:text="@string/use_both_providers"
            android:textSize="12sp" />
    </LinearLayout>

    <ToggleButton
        android:id="@+id/feedbackONOFF"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/button_inactive"
        android:minWidth="160sp"
        android:text="@string/feedbackONOFFstr"
        android:textSize="12sp" />

    <EditText
        android:id="@+id/nameField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:text="Name" >

        <requestFocus />
    </EditText>

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

    <TextView
        android:id="@+id/label_latlng"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/latlng"
        android:textSize="22sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/latlng"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/label_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/address"
        android:textSize="22sp" />

    <TextView
        android:id="@+id/address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/TextView03"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/speed"
        android:textSize="22sp" />

    <TextView
        android:id="@+id/speed"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/TextView01"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/minspeed"
        android:textSize="22sp" />

    <EditText
        android:id="@+id/minpaceIndicator"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number|numberDecimal" />

    <TextView
        android:id="@+id/TextView02"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/maxspeed"
        android:textSize="22sp" />

    <EditText
        android:id="@+id/maxpaceIndicator"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number|numberDecimal" />
   <TextView
        android:id="@+id/textView2"
        android:layout_width="316dp"
        android:layout_height="wrap_content"
        android:text="@string/maxvolume"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <SeekBar
        android:id="@+id/volumeSlider"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    
       <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/logStartButton"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_marginRight="30dp"
            android:layout_marginLeft="20dp"
            android:layout_weight="0.69"
            android:text="@string/logStartButtonString" />

        <Button
            android:id="@+id/logStopButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/logStopButtonString" />
    </LinearLayout>
        <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <TextView
	        android:id="@+id/TextView05"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/avgspeedlabel"
	        android:layout_marginRight="20dp"
	        android:textSize="22sp" />
        <TextView
	        android:id="@+id/avgspeedfield"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/avgspeed"
	        android:textSize="22sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <TextView
	        android:id="@+id/TextView04"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/avgpacelabel"
	        android:layout_marginRight="20dp"
	        android:textSize="22sp" />
        <TextView
	        android:id="@+id/avgpacefield"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/avgpace"
	        android:textSize="22sp" />
    </LinearLayout>

</LinearLayout>
</ScrollView>