<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BaselineActivity" >

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_alignParentLeft="true"
    android:layout_alignParentTop="true" >

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/provider_fine"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/button_inactive"
                android:minWidth="160sp"
                android:onClick="useFineProvider"
                android:text="@string/use_fine_provider"
                android:textSize="12sp" />

            <ToggleButton
                android:id="@+id/tglSetStatus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="ToggleButton" />

            <Button
                android:id="@+id/provider_both"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/button_inactive"
                android:minWidth="160sp"
                android:onClick="useCoarseFineProviders"
                android:text="@string/use_both_providers"
                android:textSize="12sp" />
        </LinearLayout>

        <TextView
            android:id="@+id/TextView03"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/speed"
            android:textSize="22sp" />

        <TextView
            android:id="@+id/speed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp" />

                <TextView
            android:id="@+id/TextView04"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Average Pace (min/mile)"
            android:textSize="22sp" />

        <TextView
            android:id="@+id/speed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/TextView01"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/minspeed"
            android:textSize="22sp" />

        <TextView
            android:id="@+id/minpaceIndicator"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number|numberDecimal" />

     

        <TextView
            android:id="@+id/TextView02"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/maxspeed"
            android:textSize="22sp" />

        <TextView
            android:id="@+id/maxpaceIndicator"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number|numberDecimal" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/logStartButton"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="30dp"
                android:layout_weight="0.69"
                android:text="@string/logStartButtonString" />

            <Button
                android:id="@+id/logStopButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/logStopButtonString" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/TextView05"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="20dp"
                android:text="@string/avgspeedlabel"
                android:textSize="22sp" />

            <TextView
                android:id="@+id/avgspeedfield"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/avgspeed"
                android:textSize="22sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/TextView04"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="20dp"
                android:text="@string/avgpacelabel"
                android:textSize="22sp" />

            <TextView
                android:id="@+id/avgpacefield"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/avgpace"
                android:textSize="22sp" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>

</RelativeLayout>